kubernetes-networks/canary/stable-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myingress-stable
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      # nginx.ingress.kubernetes.io/canary: "true"
    # nginx.ingress.kubernetes.io/canary-weight: '100'

    #canary-weight: '10'
    #canary-by-cookie: tester
spec:
  rules:
     - host: canary.softpro.site
       http:
        paths:
          - path: /
            backend:
              serviceName: myapp-stable
              servicePort: 80
